--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
       <input type="text" placeholder="what is name?" />
     </form>
     <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" , placeholder="write a to do " />
+    </form>
+    <ul class="js-toDoForm"></ul>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
