--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <form class="js-toDoForm">
       <input type="text" , placeholder="write a to do " />
     </form>
-    <ul class="js-toDoForm"></ul>
+    <ul class="js-toDoList"></ul>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
