--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>title</title>
     <link rel="stylesheet" href="index.css" />
+    <meta charset="utf-8" />
   </head>
   <body>
     <div class="js-clock">
